# P6_Robot_Driver

./: README.md
Camera_Detection/NanoBack/: NanoDet.layout  nanodet.cpp
Camera_Detection/Nano_IMG_Gen/: Nano_Publish.depend  nanodet.cpp
Camera_Detection/Nano_Publish/: NanoDet.depend  nanodet.cpp
Camera_Detection/Nano_Returne/: NanoDet.layout  nanodet.cpp
ROS2_Packages/: README.md  Readme.txt
ROS2_Packages/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS2_Packages/install/Driver/share/Driver/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS2_Packages/install/Jelly/share/Jelly/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ROS2_Packages/install/bones/lib/bones/: doggy
ROS2_Packages/install/bones/share/bones/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ROS2_Packages/install/camera_pack/lib/camera_pack/: cam_Nano  cam_img  cam_sub
ROS2_Packages/install/camera_pack/share/camera_pack/: package.sh  package.xml
ROS2_Packages/install/lidar/lib/lidar/: center_pub  focus_pub  listener  talker  test_sens  timed_focus
ROS2_Packages/install/lidar/share/lidar/: package.sh  package.xml
ROS2_Packages/install/pubsub/lib/pubsub/: rd_Nano  rd_Ros  sub
ROS2_Packages/log/: latest_build
ROS2_Packages/src/bones/: CMakeLists.txt  package.xml
ROS2_Packages/src/bones/src/: doggy.cpp
ROS2_Packages/src/camera_pack/: CMakeLists.txt
ROS2_Packages/src/camera_pack/src/: cam_sub.cpp  rd_Nano_Ros.cpp  rd_img_gen.cpp
ROS2_Packages/src/lidar/: setup.py
ROS2_Packages/src/lidar/lidar/: publisher3.py  publisher4.py
ROS2_Packages/src/pubsub/: CMakeLists.txt
ROS2_Packages/src/pubsub/src/: Sub.cpp  rd_Nano_Ros.cpp  rd_Ros.cpp
ROS2_Packages/src/py_Driver/: package.xml  setup-DESKTOP-VI79LAO.py  setup.cfg  setup.py
ROS2_Packages/src/py_Driver/launch/: hvalborg.launch.py  terminal.launch.py  timed.launch.py
ROS2_Packages/src/py_Driver/py_Driver/: PI_Reg.py  PI_Reg_Aggro.py  PI_Reg_Exam_Test.py  PI_Reg_Scaled_Fix.py  Test_Controller.py  extra_controller.py  py_wheely.py  routine.py  single_control.py  wheely.py
(+27 files in other folders)
